--- a/AppRickYMorty/app/src/main/res/values/strings.xml
+++ b/AppRickYMorty/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">AppRickYMorty</string>
+    <string name="app_name">App Rick Y Morty</string>
+    <string name="list_screen_title">Listado de Personajes</string>
+    <string name="Character_details">Detalles del Personaje</string>
+    <string name="Location_details">Detalles de la Ubicación</string>
 </resources>
